# resist0rz

./: .gitignore  README.md  colors_default.json  main.py  pre-commit  setup.cfg
dev/: pre-commit
src/resist0rz/: App.py  Calculator.py  ColorBand.py  ColorCalculator.py  Parser.py  __main__.py  const.py  util.py
tests/: test_ColorCalculator.py  test_SMD_Calculator.py  test_unit_conversion.py
