[metadata]
name = resist0rz
description = Get the resistance value of any color-coded or SMD resistor
version = 0.1.0
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, linux, win32, cygwin, osx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages = resist0rz
python_requires = >=3.11
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    resc = resist0rz.__main__:main

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = resist0rz
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=resist0rz
    --cov-report=term-missing
